objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Usage_RT__c</fullName>
        <description>This has been changed to usage RT name</description>
        <formula>Partner_or_Venue__r.RecordTypeId
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Partner_or_Venue__r.RecordTypeId,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage RT (name)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_TypeLOOK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage TypeL</label>
        <referenceTo>Usage_Type__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <formula>Partner_or_Venue__r.Usage_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Logistics__c</fullName>
        <label>Venue Logistics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmation received in writing</fullName>
                </value>
                <value>
                    <fullName>Venue booking on PO Log</fullName>
                </value>
                <value>
                    <fullName>Confirmation completed, printed, sent</fullName>
                </value>
                <value>
                    <fullName>Invoice received and sent to Finance</fullName>
                </value>
                <value>
                    <fullName>Invoice paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_APM__c</fullName>
        <formula>Wave__r.Wave_APM__r.FirstName &amp;&quot; &quot;&amp;Wave__r.Wave_APM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave APM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Component_End_Date__c</fullName>
        <description>This formula field is required for using in the Mail Merge Documents.</description>
        <formula>Wave_Dates__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave Component End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wave_Component_Start_Date__c</fullName>
        <description>This formula field is required for using in the Mail Merge Documents.</description>
        <formula>Wave_Dates__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave Component Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wave_Dates__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wave Dates</label>
        <referenceTo>Wave_Dates__c</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <label>Wave</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Wave__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>2014,2015,2016,2017</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wave_number__c</fullName>
        <formula>Wave__r.Wave_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_record_type__c</fullName>
        <formula>Wave__r.RecordType.Name</formula>
        <label>Wave record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_we_using_this_partner_for__c</fullName>
        <label>What are we using this partner for?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_date_time_should_the_wave_arrive__c</fullName>
        <inlineHelpText>Appears on logistics form.</inlineHelpText>
        <label>what time does the booking start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_date_time_should_the_wave_leave__c</fullName>
        <inlineHelpText>Appears on logistics form.</inlineHelpText>
        <label>what time does the booking end</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_equipment_will_the_venue_provide__c</fullName>
        <label>What equipment will the venue provide?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_purpose_of_the_day__c</fullName>
        <label>What is the purpose of the day?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_transport_plan_If_minibus__c</fullName>
        <inlineHelpText>What is the transport plan? If minibus , where should the minibus park?</inlineHelpText>
        <label>What is the transport plan? If minibus ,</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_wet_weather_plan__c</fullName>
        <inlineHelpText>Appears on logistics form. Leave blank if not applicable.</inlineHelpText>
        <label>What is the wet weather plan?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_time_are_we_meeting__c</fullName>
        <label>What time are we meeting?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_time_is_the_booking_for__c</fullName>
        <label>What time is the booking for?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_should_we_arrive__c</fullName>
        <description>Arrival Time, changed from Date/Time to text as the users should not need to enter a Date.</description>
        <inlineHelpText>Enter the time as you would want it displayed on an external Document</inlineHelpText>
        <label>When should we arrive?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_should_we_leave__c</fullName>
        <description>This has been changed from Date/Time to just time, because the User should not need to enter a Time.</description>
        <inlineHelpText>Enter the Time here as it should be written on an external Document.</inlineHelpText>
        <label>When should we leave?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_should_staff_meet__c</fullName>
        <label>Where should staff meet</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Which_Team_is_this_for__c</fullName>
        <label>Which Team is this for?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Wave_is_this_for__c</fullName>
        <label>Which Wave is this for?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Which_cluster_is_this_for_del__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham 1</fullName>
                </value>
                <value>
                    <fullName>Birmingham 2</fullName>
                </value>
                <value>
                    <fullName>Birmingham 3</fullName>
                </value>
                <value>
                    <fullName>Birmingham 4</fullName>
                </value>
                <value>
                    <fullName>Birmingham 5</fullName>
                </value>
                <value>
                    <fullName>Birmingham 6</fullName>
                </value>
                <value>
                    <fullName>Birmingham 7</fullName>
                </value>
                <value>
                    <fullName>Birmingham 8</fullName>
                </value>
                <value>
                    <fullName>Birmingham 9</fullName>
                </value>
                <value>
                    <fullName>North London 1</fullName>
                </value>
                <value>
                    <fullName>North London 2</fullName>
                </value>
                <value>
                    <fullName>North London 3</fullName>
                </value>
                <value>
                    <fullName>North London 4</fullName>
                </value>
                <value>
                    <fullName>North London 5</fullName>
                </value>
                <value>
                    <fullName>North London 6</fullName>
                </value>
                <value>
                    <fullName>North London 7</fullName>
                </value>
                <value>
                    <fullName>North London 8</fullName>
                </value>
                <value>
                    <fullName>North London 9</fullName>
                </value>
                <value>
                    <fullName>North West 1</fullName>
                </value>
                <value>
                    <fullName>North West 2</fullName>
                </value>
                <value>
                    <fullName>North West 3</fullName>
                </value>
                <value>
                    <fullName>North West 4</fullName>
                </value>
                <value>
                    <fullName>North West 5</fullName>
                </value>
                <value>
                    <fullName>North West 6</fullName>
                </value>
                <value>
                    <fullName>North West 7</fullName>
                </value>
                <value>
                    <fullName>North West 8</fullName>
                </value>
                <value>
                    <fullName>North West 9</fullName>
                </value>
                <value>
                    <fullName>South London 1</fullName>
                </value>
                <value>
                    <fullName>South London 2</fullName>
                </value>
                <value>
                    <fullName>South London 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_cluster_is_this_for_del__c</fullName>
        <label>Which cluster is this for?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>North London</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South London</fullName>
                </value>
                <value>
                    <fullName>Warwickshire</fullName>
                </value>
                <value>
                    <fullName>West London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_rooms_have_been_booked__c</fullName>
        <label>Which rooms have been booked?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_are_the_Dragons__c</fullName>
        <label>Who are the Dragons?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking_status_value__c</fullName>
        <formula>IF(
ISPICKVAL(Status__c , &quot;Confirmed&quot;),1,
IF(
ISPICKVAL(Status__c , &quot;APM Assigned&quot;),0.5,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>booking status value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>challenge_contact_email__c</fullName>
        <formula>Challenge_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>challenge contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>challenge_contact_mobile__c</fullName>
        <formula>Challenge_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>challenge contact mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_or_Venue__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>BADHAV 11 sabesan</label>
    </listViews>
    <listViews>
        <fullName>All_Manc_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Team__c</columns>
        <columns>Wave__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Manc</value>
        </filters>
        <label>All Manc Bookings</label>
    </listViews>
    <listViews>
        <fullName>All_visits</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Booking_Date_Formula__c</columns>
        <columns>Team__c</columns>
        <columns>Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Partner_or_Venue__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PM_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Booking__c.RCD_Professional_Visit,Booking__c.TC_Community_Partner,Booking__c.RCD_Fundraising_Partner</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/1/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>MRK B</value>
        </filters>
        <filters>
            <field>Arrival_Time__c</field>
            <operation>equals</operation>
        </filters>
        <label>All visits- timings needed</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_Procurement_Innovation</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Head_of_Programmes</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Head_of_Systems_IT</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Autumn_PCKO_Venues1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Usage_Type__c</field>
            <operation>equals</operation>
            <value>PCKO</value>
        </filters>
        <filters>
            <field>Challenge_Contact__c</field>
            <operation>equals</operation>
            <value>niamh stack</value>
        </filters>
        <label>Autumn PCKO Venues</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Bookings_view</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Team__c</columns>
        <columns>Wave__c</columns>
        <columns>Partner_or_Venue__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>Birmingham</value>
        </filters>
        <label>Birmingham Bookings view</label>
        <sharedTo>
            <group>Prog_SouthBirmingham_2013</group>
            <group>TCSWorkingGroupSCAW</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bookings_CHIW</fullName>
        <columns>Usage_Type__c</columns>
        <columns>NAME</columns>
        <columns>Challenge_Contact__c</columns>
        <columns>Booking_Timings__c</columns>
        <columns>Media_Project__c</columns>
        <columns>Wave__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <label>Bookings CHIW</label>
        <sharedTo>
            <group>Prog_W_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bookings_HEK</fullName>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <columns>NAME</columns>
        <columns>Partner_or_Venue__c</columns>
        <columns>Challenge_Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Booking_Timings__c</columns>
        <columns>Media_Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>HEK</value>
        </filters>
        <label>Bookings HEK</label>
        <sharedTo>
            <group>Prog_W_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bookings_MAK</fullName>
        <columns>Wave__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>Team__c</columns>
        <columns>Partner_or_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Challenge_Contact__c</columns>
        <columns>Booking_Timings__c</columns>
        <columns>Media_Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>HRW</value>
        </filters>
        <filters>
            <field>Usage_Type__c</field>
            <operation>greaterOrEqual</operation>
            <value>RCA</value>
        </filters>
        <label>PROG 2013 Master Bookings View</label>
        <sharedTo>
            <group>ProgrammesAll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_Big_Challenge_Partners1</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>Big Challenge</value>
        </filters>
        <label>CHIW Big Challenge Partners</label>
        <sharedTo>
            <group>Prog_South_Surrey_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_Fundraising_Partners</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>Fundraising</value>
        </filters>
        <label>CHIW Fundraising Partners</label>
    </listViews>
    <listViews>
        <fullName>CHIW_Fundraising_Partners1</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>Fundraising</value>
        </filters>
        <label>CHIW Fundraising Partners</label>
        <sharedTo>
            <group>Prog_South_Surrey_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_PCKO_Venues</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <columns>Partner_or_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>PCKO</value>
        </filters>
        <filters>
            <field>Cluster_Pull__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <label>CHIW PCKO Venues</label>
        <sharedTo>
            <group>Prog_South_Surrey_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_PC_Returns</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>PC Return</value>
        </filters>
        <label>CHIW PC Returns</label>
        <sharedTo>
            <group>Prog_South_Surrey_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_Professional_Visits</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <columns>Partner_Contact__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>Professional</value>
        </filters>
        <filters>
            <field>Partner_or_Venue__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <label>CHIW Professional Visits</label>
        <sharedTo>
            <group>Prog_South_Surrey_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_RCA_Community_Partners</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Wave__c</columns>
        <columns>Contact__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>CHIW</value>
        </filters>
        <filters>
            <field>Usage_Type__c</field>
            <operation>contains</operation>
            <value>RCA Community</value>
        </filters>
        <label>CHIW RCA Community Partners</label>
        <sharedTo>
            <group>Prog_South_Surrey_2013</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <recordTypes>
        <fullName>Big_Challenge_Partner</fullName>
        <active>true</active>
        <label>Big Challenge Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dragon</fullName>
        <active>true</active>
        <label>Dragon</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dragon_1</fullName>
        <active>false</active>
        <label>Dragon 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dragon_2</fullName>
        <active>false</active>
        <label>Dragon 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dragon_3</fullName>
        <active>false</active>
        <label>Dragon 3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising_Partner</fullName>
        <active>true</active>
        <label>Fundraising Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Graduation_Usage</fullName>
        <active>true</active>
        <label>Graduation Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Community_Leader</fullName>
        <active>true</active>
        <label>Local Community Leader</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCKO</fullName>
        <active>true</active>
        <label>PCKO</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCKO_Venue_2014</fullName>
        <active>true</active>
        <label>PCKO Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Return</fullName>
        <active>true</active>
        <label>PC Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Return_Venue</fullName>
        <active>true</active>
        <label>PC Return Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Venue</fullName>
        <active>true</active>
        <description>For use by Procurement team</description>
        <label>PC Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Visit</fullName>
        <active>true</active>
        <label>Professional Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Big_Challenge</fullName>
        <active>true</active>
        <label>RCA Big Challenge Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Community_Partner</fullName>
        <active>true</active>
        <label>RCA Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Day_Venue</fullName>
        <active>true</active>
        <label>RCA Day Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Partner_Challenge</fullName>
        <active>true</active>
        <label>RCD Social Action Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA_Usage</fullName>
        <active>true</active>
        <label>RCA Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Campaign_Expert</fullName>
        <active>true</active>
        <label>RCD Campaign Expert</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Celebration</fullName>
        <active>true</active>
        <label>RCD Celebration</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Day_Venue</fullName>
        <active>true</active>
        <label>RCD Day Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Fundraising_Partner</fullName>
        <active>true</active>
        <label>RCD Sponsorship Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Professional_Visit</fullName>
        <active>true</active>
        <label>RCD Professional Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCD_Usage</fullName>
        <active>true</active>
        <label>RCD Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Res_Acc</fullName>
        <active>true</active>
        <description>Used for Residential Accommodation</description>
        <label>Res Acc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sat_RCA</fullName>
        <active>true</active>
        <description>Sat RCA Venue Booking</description>
        <label>Sat RCA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sat_RCA_Day_Venue</fullName>
        <active>true</active>
        <description>Sat RCA Venue Booking</description>
        <label>Sat RCA Day Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Showcase_Usage</fullName>
        <active>true</active>
        <label>Showcase Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Showcase_Venue</fullName>
        <active>true</active>
        <label>TC Showcase Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Split_RCD_Venue</fullName>
        <active>true</active>
        <description>To be used when the RCD Venue is on 2 sites</description>
        <label>Split RCD Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship_Partner</fullName>
        <active>true</active>
        <description>Sponsorship Partner Booking</description>
        <label>Sponsorship Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sports_Usage</fullName>
        <active>true</active>
        <label>Sports Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sun_RCA</fullName>
        <active>true</active>
        <description>Sun RCA Venue Booking</description>
        <label>Sun RCA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sun_RCA_Day_Venue</fullName>
        <active>true</active>
        <description>Sun RCA Venue Booking</description>
        <label>Sun RCA Day Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCKO</fullName>
        <active>true</active>
        <label>TCKO</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCKO_Venue</fullName>
        <active>true</active>
        <label>TCKO Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Community_Partner</fullName>
        <active>true</active>
        <label>TC Community Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Day_Venue</fullName>
        <active>true</active>
        <label>TC Day Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Evening_Session_Space_Venue</fullName>
        <active>true</active>
        <label>TC Evening Session Space Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Return_Venue</fullName>
        <active>true</active>
        <label>TC Return Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Sports_Venue</fullName>
        <active>true</active>
        <label>TC Sports Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TC_Usage</fullName>
        <active>true</active>
        <label>TC Usage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_Programmes</fullName>
        <active>true</active>
        <label>Test-Programmes</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_for_Group_Event</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Partner_or_Venue__r.Usage_Type__r.Group_Event__c==true,Team__c &lt;&gt; null)</errorConditionFormula>
        <errorMessage>Team cannot be selected, this usage is for group event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Graduation_datetimes_on_same_date</fullName>
        <active>false</active>
        <errorConditionFormula>LEFT( TEXT( What_date_time_should_the_wave_arrive__c ) , 10 ) &lt;&gt; LEFT ( TEXT( What_date_time_should_the_wave_leave__c ) , 10 )</errorConditionFormula>
        <errorMessage>Both dates entered must be on the same date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MP_Booking</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNULL( MP_Request__c )),  Partner_or_Venue__r.Account__r.RecordTypeId &lt;&gt; &quot;012C0000000QFln&quot;)</errorConditionFormula>
        <errorDisplayField>MP_Request__c</errorDisplayField>
        <errorMessage>The Usage for this Booking is not connected to an MP Account. You therefore cannot add an MP Request</errorMessage>
    </validationRules>
</CustomObject>